# MyWebserver

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  GEMINI.md  README.md  TERMCHAT.md  docker-compose.yml  go.mod  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  init_scylla.sh
.github/workflows/: ci.yml
client/: CMakeLists.txt  home_page.cpp  main.cpp  network_manager.cpp  network_manager.h  ui_common.cpp  ui_common.h
client/auth/: auth_page.cpp  auth_page.h  login_page.h  register_page.h
client/ui/: home_page.cpp  home_page.h  ui_common.cpp  ui_common.h
client/ui/auth/: login_page.cpp  register_page.cpp
client/ui/chat/: chat_panel.cpp  chat_panel.h
client/ui/friend/: add_friend_panel.cpp  add_friend_panel.h  handle_friend_panel.cpp  handle_friend_panel.h
code/: CMakeLists.txt  main.cpp
code/buffer/: buffer.cpp  buffer.h  buffer.md
code/http/: README.md  httpconn.cpp  httpconn.h  httpreponse.cpp  httprequest.cpp  httprequest.h  httpresponse.h
code/log/: blockdeque.h  blockqueue.h  log.cpp  log.h
code/pool/: sqlconnpool.cpp  sqlconnpool.h  threadpool.h
code/server/: README.md  epoller.cpp  epoller.h  webserver.cpp  webserver.h
code/timer/: heaptimer.cpp  heaptimer.h
proto/: CMakeLists.txt  auth_service.proto  common.proto  friend_service.proto  message.proto  message_service.proto  protocol.proto
resources/: 400.html  403.html  404.html  error.html  index.html  login.html  picture.html  register.html  video.html  welcome.html
scripts/: clear_logs
server/src/: CMakeLists.txt  main.cpp
server/src/buffer/: buffer.cpp  buffer.h
server/src/core/: epoller.h  mpsc_queue.h  tcp_connection.cpp  tcp_connection.h  webserver.cpp  webserver.h
server/src/dao/: async_msg_writer.cpp  async_msg_writer.h  base_dao.h  friend_dao.cpp  friend_dao.h  msg_scylla_dao.cpp  msg_scylla_dao.h  schema.h  user_dao.cpp  user_dao.h
server/src/handler/: http_handler.cpp  http_handler.h  protobuf_handler.cpp  protobuf_handler.h
server/src/http/: httpconn.cpp  httpconn.h  httpreponse.cpp  httprequest.cpp  httprequest.h  httpresponse.h
server/src/log/: blockdeque.h  log.cpp  log.h
server/src/pool/: scylla_session.cpp  scylla_session.h  sqlconnpool.cpp  sqlconnpool.h
server/src/server/: http_handler.cpp  protobuf_handler.cpp  protobuf_handler.h  tcp_connection.cpp  tcp_connection.h  webserver.cpp  webserver.h
server/src/service/: auth_service.cpp  auth_service.h  friend_service.cpp  friend_service.h  msg_service.cpp  msg_service.h  push_service.cpp  push_service.h
server/src/timer/: heaptimer.cpp  heaptimer.h
server/src/util/: uuid_generator.h
server/src/utils/: id_generator.h  token_util.h  uuid_generator.cpp  uuid_generator.h
sql/: schema.sql
test/: Makefile  test.cpp  test_register.py
tests/: CMakeLists.txt  benchmark_im.py  smoke.go  test.cpp  test_auth.py  test_friend.py  test_message.py
webbench-1.5/: Makefile  socket.c  webbench.c
